force-app/main/default/objects/Customer_Action__c/Customer_Action__c.object-meta.xml
<CustomObject>
    <description>Tasks that arise relating to the settlement process which can be related to customers, Coaches and System</description>
    <label>Customer Action</label>
    <nameField>
        <displayFormat>CA-{00000000}</displayFormat>
        <label>Customer Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Actions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>