force-app/main/default/objects/Customer_Action__c/fields/Accepted_By__c.field-meta.xml
<CustomField>
    <fullName>Accepted_By__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Accepted by party - the OCV party ID of the person who provided this acceptance</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Accepted By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>