force-app/main/default/objects/Customer_Action__c/fields/Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Date accepted</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Accepted Date</label>
    <type>DateTime</type>
</CustomField>