force-app/main/default/objects/Customer_Action__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Action being performed on the record</description>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>