force-app/main/default/objects/Customer_Action__c/fields/Action_Counter__c.field-meta.xml
<CustomField>
    <fullName>Action_Counter__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Mobile</complianceGroup>
    <defaultValue>0</defaultValue>
    <description>Tracks how many times customer has clicked an action on Mobile</description>
    <label>Action Counter</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>