force-app/main/default/objects/Customer_Action__c/fields/Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Name__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Step action name for Notification</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Action Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>