force-app/main/default/objects/Customer_Action__c/fields/Action_UUID__c.field-meta.xml
<CustomField>
    <fullName>Action_UUID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Generates a UUID unique to each customer action to be taken and passes this to mobile for consuming feedback loop</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Action UUID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>