force-app/main/default/objects/Customer_Action__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Customer Action&apos;s Category</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CATEGORY_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>CATEGORY_DOCUMENT</fullName>
                <label>Document</label>
            </value>
            <value>
                <fullName>CATEGORY_ACCOUNT</fullName>
                <label>Account</label>
            </value>
            <value>
                <fullName>CATEGORY_CUSTOMER_ACKNOWLEDGEMENT</fullName>
                <label>Customer Acknowledgments</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>