force-app/main/default/objects/Customer_Action__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Settlement Domain</complianceGroup>
    <description>Timestamp for when the task was completed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>