force-app/main/default/objects/Customer_Action__c/fields/Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Completed_By__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>OCV Id of who completed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Completed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>