force-app/main/default/objects/Customer_Action__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer in context</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Actions</relationshipLabel>
    <relationshipName>Customer_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>