force-app/main/default/objects/Customer_Action__c/fields/Customer_Task_Data__c.field-meta.xml
<CustomField>
    <fullName>Customer_Task_Data__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Customer Task Data</description>
    <label>Customer Task Data</label>
    <referenceTo>Customer_Task_Data__c</referenceTo>
    <relationshipLabel>Customer Actions</relationshipLabel>
    <relationshipName>Customer_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>