force-app/main/default/objects/Customer_Action__c/fields/Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Document_Id__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>References to specific documents accepted as part of this contract acceptance</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>