force-app/main/default/objects/Customer_Action__c/fields/Eligible_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Eligible_to_Complete__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>[Output] List of Roles and specific Parties that are eligible to complete the Task
May have multiple records where several roles and/or parties are eligible to complete this task</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Eligible to Complete</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>