force-app/main/default/objects/Customer_Action__c/fields/Error_Description__c.field-meta.xml
<CustomField>
    <fullName>Error_Description__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>error codes and messages from Account Maintenance call.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Description</label>
    <type>TextArea</type>
</CustomField>