force-app/main/default/objects/Customer_Action__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Financial Account</description>
    <label>Financial Account</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Pending Updates to Financial Account</relationshipLabel>
    <relationshipName>Customer_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>