force-app/main/default/objects/Customer_Action__c/fields/Loan_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Loan_Applicant__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to loan applicant</description>
    <label>Loan Applicant</label>
    <referenceTo>LoanApplicant</referenceTo>
    <relationshipLabel>Customer Actions</relationshipLabel>
    <relationshipName>Customer_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>