force-app/main/default/objects/Customer_Action__c/fields/Loan_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Contract_Status__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Status of the loan contract</description>
    <label>Loan Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STATE_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>STATE_ACTIVE</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>STATE_EXPIRED</fullName>
                <label>Expired</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>