force-app/main/default/objects/Customer_Action__c/fields/Memorandum_of_Common_Provisions_Version__c.field-meta.xml
<CustomField>
    <fullName>Memorandum_of_Common_Provisions_Version__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Version (aka Effective Date) of Memorandum of Common Provisions at time of acceptance</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Memorandum of Common Provisions Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>