force-app/main/default/objects/Customer_Action__c/fields/Mortgage_Contract__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Contract__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to mortgage contract</description>
    <label>Mortgage Contract</label>
    <referenceTo>Mortgage_Contract__c</referenceTo>
    <relationshipLabel>Customer Actions</relationshipLabel>
    <relationshipName>Customer_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>