force-app/main/default/objects/Customer_Action__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>New value of the field being updated</description>
    <encryptionScheme>None</encryptionScheme>
    <label>New Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>