force-app/main/default/objects/Customer_Action__c/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Old Value of the field being updated</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Old Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>