force-app/main/default/objects/Customer_Action__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>The role of the actor that can action this task</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ROLE_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>ROLE_APPLICANT</fullName>
                <label>Customer</label>
            </value>
            <value>
                <fullName>ROLE_LEX_SYSTEM</fullName>
                <label>Settlement system</label>
            </value>
            <value>
                <fullName>ROLE_COACH</fullName>
                <label>Coach</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>