force-app/main/default/objects/Customer_Action__c/fields/Settlement__c.field-meta.xml
<CustomField>
    <fullName>Settlement__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Reference of associated Settlement Id (Salesforce ID)</description>
    <label>Settlement</label>
    <referenceTo>Settlement__c</referenceTo>
    <relationshipLabel>Customer Actions</relationshipLabel>
    <relationshipName>Customer_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>