force-app/main/default/objects/Customer_Action__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Customer Action&apos;s Status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STATE_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>STATE_PENDING</fullName>
                <label>Pending</label>
            </value>
            <value>
                <fullName>STATE_COMPLETED</fullName>
                <label>Completed</label>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>