force-app/main/default/objects/Customer_Action__c/fields/Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Task_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Unique ID for Customer Action/task</description>
    <label>Task Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>