force-app/main/default/objects/Customer_Action__c/fields/Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Customer Action&apos;s Type</description>
    <label>Task Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TYPE_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>TYPE_UPLOAD_LOO_DOCUMENT</fullName>
                <label>Upload LOO Document</label>
            </value>
            <value>
                <fullName>TYPE_UPLOAD_MORTGAGE_DOCUMENT</fullName>
                <label>Upload Mortgage Document</label>
            </value>
            <value>
                <fullName>TYPE_GENERATE_LOO_DOCUMENT</fullName>
                <label>Generate LOO Document</label>
            </value>
            <value>
                <fullName>TYPE_GENERATE_MORTGAGE_DOCUMENT</fullName>
                <label>Generate Mortgage Document</label>
            </value>
            <value>
                <fullName>TYPE_ACCEPT_LOAN_OFFER</fullName>
                <label>Accept loan offer</label>
            </value>
            <value>
                <fullName>TYPE_ACCEPT_MORTGAGE_CONTRACT</fullName>
                <label>Accept Mortgage Document</label>
            </value>
            <value>
                <fullName>TYPE_UPLOAD_WITNESS_DOCUMENT</fullName>
                <label>Upload Witness Document</label>
            </value>
            <value>
                <fullName>TYPE_UPLOAD_BUILDING_INSURANCE_DOCUMENT</fullName>
                <label>Upload Building Insurance Document</label>
            </value>
            <value>
                <fullName>TYPE_SET_DRAWDOWN_ACCOUNT</fullName>
                <label>Set Drawdown Account</label>
            </value>
            <value>
                <fullName>TYPE_CREATE_REPAYMENT_PREFERENCE</fullName>
                <label>Create Repayment Preference</label>
            </value>
            <value>
                <fullName>TYPE_CREATE_RELEASE_AUTHORITY</fullName>
                <label>Create Release Authority</label>
            </value>
            <value>
                <fullName>TYPE_VERIFY_BUILDING_INSURANCE_DOCUMENT</fullName>
                <label>Verify Building Insurance Document</label>
            </value>
            <value>
                <fullName>TYPE_CONFIRM_DRAWDOWN_ACCOUNT</fullName>
                <label>Confirm Drawdown Account</label>
            </value>
            <value>
                <fullName>TYPE_CONFIRM_REPAYMENT_PREFERENCE</fullName>
                <label>Confirm Repayment Preference</label>
            </value>
            <value>
                <fullName>TYPE_GENERATE_SIGNED_LOO_DOCUMENT</fullName>
                <label>Signed LOO Document</label>
            </value>
            <value>
                <fullName>TYPE_GENERATE_SIGNED_MORTGAGE_DOCUMENT</fullName>
                <label>Signed Mortgage Document</label>
            </value>
            <value>
                <fullName>Update Signing Authority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>