force-app/main/default/objects/Customer_Action__c/fields/Terms_and_Conditions_Version__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions_Version__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Terms and Conditions version at time of acceptance</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Terms and Conditions Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>