force-app/main/default/objects/Customer_Action__c/fields/Triggered_From__c.field-meta.xml
<CustomField>
    <fullName>Triggered_From__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>The update process trigger source</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Triggered From</label>
    <length>80</length>
    <type>Text</type>
</CustomField>