force-app/main/default/objects/Customer_Action__c/recordTypes/Customer_Action.recordType-meta.xml
<RecordType>
    <fullName>Customer_Action</fullName>
    <active>true</active>
    <description>For BOH Settlement Flow</description>
    <label>Customer Action</label>
</RecordType>