force-app/main/default/objects/Customer_Action__c/recordTypes/Customer_Notification_Action.recordType-meta.xml
<RecordType>
    <fullName>Customer_Notification_Action</fullName>
    <active>true</active>
    <description>Stores action taken by customer  on Notifications</description>
    <label>Customer Notification Action</label>
</RecordType>