force-app/main/default/objects/Customer_Action__c/recordTypes/Loan_Offer_Acceptance.recordType-meta.xml
<RecordType>
    <fullName>Loan_Offer_Acceptance</fullName>
    <active>true</active>
    <label>Loan Offer Acceptance</label>
</RecordType>