force-app/main/default/objects/Customer_Action__c/recordTypes/Mortgage_Contract_Acceptance.recordType-meta.xml
<RecordType>
    <fullName>Mortgage_Contract_Acceptance</fullName>
    <active>true</active>
    <label>Mortgage Contract Acceptance</label>
</RecordType>