force-app/main/default/objects/Customer_Action__c/recordTypes/Pending_Financial_Account_Updates.recordType-meta.xml
<RecordType>
    <fullName>Pending_Financial_Account_Updates</fullName>
    <active>true</active>
    <description>For Financial Account Updates</description>
    <label>Pending Financial Account Updates</label>
</RecordType>